--- a/gino1.html
+++ b/gino1.html
@@ -7,18 +7,13 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <p>hhy大傻逼</p>
-    <span>1</span>
-    <span>2</span>
-    <ol>
-        <li> <em> <strong><a href="https://www.youtube.com/">niunai</a> </strong></em></li>
-        <li>qiaokeli</li>
-        <li>1</li>
-    </ol>
+    <p>徐涵大傻逼</p>
+    <span>傻逼</span>
+    <span>傻逼</span>
     <hr>
-    <ul>
-        <li>hhy大傻逼</li>
-    </ul>
-    <em></em>
+        <li>徐涵我爱你</li>
+        <li> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1
+            ">相信我再点一次</a>
+    
 </body>
 </html>
