--- a/gino1.html
+++ b/gino1.html
@@ -7,13 +7,24 @@
 </head>
 <body>
     <h1>hello world</h1>
-    <p>徐涵大傻逼</p>
-    <span>傻逼</span>
-    <span>傻逼</span>
+    <p>hello1 胡豪远</p>
     <hr>
-        <li>徐涵我爱你</li>
+        <li>我爱你</li>
         <li> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1
             ">相信我再点一次</a>
     
 </body>
+<img src="./img/hhy.jpg" class="hhy" alt="胡豪远">
+<video src="./video/hhy.mp4" autoplay controls class="shpei"></video>
 </html>
+<style>
+    .shpei{
+        width: 600px;
+        height: 800px;
+    }
+    .hhy{
+width: 600px;
+height: 800px;
+
+    }
+</style>
